# isa-s1-msdp-labs

./: main.py  pyproject.toml
lab1/: lab1.ipynb
