[project]
name = "isa-s1-msdp-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numba>=0.64.0",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
]
